--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "ssh2": "^1.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
